did a bunch of work without commiting whoops

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,9 +5,11 @@
   <button>Search for a movie</button>
 </form><br>
 
+ <%= @foo %>
+
 <% if params[:search] %>
-  <h4>Displaying top 10 results:</h4><br>
-  <% @search_results[0..10].each do |movie| %>
+  <h4>Display results:</h4><br>
+  <% @search_results.each do |movie| %>
   <a href="/movies/<%= movie.id  %>"><%= movie.title %></a><br>
   <% end %>
 <% end %>
